--- a/ParticleEditor/MainWindow.resx
+++ b/ParticleEditor/MainWindow.resx
@@ -138,7 +138,10 @@ each particle
 Scale Affector:
 Adds the given scale to each particle's scale.
 Negative scales will make particles shrink, positive
-will make them grow</value>
+will make them grow
+
+Velocity Affector:
+Scales the velocity of a particle without changing its direction.</value>
   </data>
   <metadata name="toolTipControl.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>131, 17</value>
